--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
 Package: pimeta
 Type: Package
-Title: Prediction Interval for Random-Effects Meta-Analysis
-Version: 0.0.1
-Author: Kengo Nagashima, Hisashi Noma, and Toshi A. Furukawa
-Maintainer: Kengo Nagashima <nshi@chiba-u.jp>
-Description: Prediction Intervals for Meta-Analysis.
-License: GPL-3
-Imports: Rcpp (>= 0.12.3)
+Title: Prediction Intervals for Random-Effects Meta-Analysis
+Version: 1.0.0
+Authors@R: c(
+  person("Kengo", "Nagashima", email = "nshi1201@gmail.com",
+         role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4529-9045")),
+  person("Hisashi", "Noma", role = c("aut")),
+  person("Toshi A.", "Furukawa", role = c("aut")))
+Description: An implementation of prediction intervals for random-effects meta-analysis:
+  Higgins et al. (2009) <doi:10.1111/j.1467-985X.2008.00552.x>, Partlett and Riley (2017)
+  <doi:10.1002/sim.7140>, and Nagashima et al. (2018) <arXiv:1804.01054>.
+Depends: R (>= 3.0.0)
+Imports: stats, Rcpp (>= 0.12.16)
 LinkingTo: Rcpp, RcppEigen
+License: GPL-3
 RoxygenNote: 6.0.1
