--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Authors@R: c(
   person("Toshi A.", "Furukawa", role = c("aut")))
 Description: An implementation of prediction intervals for random-effects meta-analysis:
   Higgins et al. (2009) <doi:10.1111/j.1467-985X.2008.00552.x>, Partlett and Riley (2017)
-  <doi:10.1002/sim.7140>, and Nagashima et al. (2018) <arXiv:1804.01054>.
+  <doi:10.1002/sim.7140>, and Nagashima et al. (2018) <doi:10.1177/0962280218773520>,
+  <arXiv:1804.01054>.
 Depends: R (>= 3.0.0)
 Imports: stats, Rcpp (>= 0.12.16)
 LinkingTo: Rcpp, RcppEigen
