--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,13 @@ export(pima)
 export(pima_boot)
 export(pima_hts)
 export(pima_htsreml)
+export(tau2h_dl)
+export(tau2h_eb)
+export(tau2h_hm)
+export(tau2h_ml)
+export(tau2h_reml)
+export(tau2h_sj)
+export(tau2h_sj2)
+export(tau2h_vc)
 importFrom(Rcpp,evalCpp)
 useDynLib(pimeta, .registration = TRUE)
