Paule-Mandel estimator for \tau^2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(tau2h_dl)
 export(tau2h_eb)
 export(tau2h_hm)
 export(tau2h_ml)
+export(tau2h_pm)
 export(tau2h_reml)
 export(tau2h_sj)
 export(tau2h_sj2)
