--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(pima)
 export(pima_boot)
 export(pima_hts)
 export(pima_htsreml)
+export(tau2h_areml)
 export(tau2h_dl)
 export(tau2h_eb)
 export(tau2h_hm)
