Bayes modal estimator for \tau^2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(pima_boot)
 export(pima_hts)
 export(pima_htsreml)
 export(tau2h_areml)
+export(tau2h_bm)
 export(tau2h_dl)
 export(tau2h_eb)
 export(tau2h_hm)
