These functions were integrated in `tau2h()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,17 +10,6 @@ export(pima)
 export(pima_boot)
 export(pima_hts)
 export(pima_htsreml)
-export(tau2h_areml)
-export(tau2h_bm)
-export(tau2h_dl)
-export(tau2h_eb)
-export(tau2h_hm)
-export(tau2h_hs)
-export(tau2h_ml)
-export(tau2h_pm)
-export(tau2h_reml)
-export(tau2h_sj)
-export(tau2h_sj2)
-export(tau2h_vc)
+export(tau2h)
 importFrom(Rcpp,evalCpp)
 useDynLib(pimeta, .registration = TRUE)
