Bartlett corrections (Noma, 2011)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method(print,cima)
 S3method(print,pima)
 export(bootPI)
 export(cima)
-export(cima_pl)
+export(cima_bc)
 export(htsdl)
 export(htsreml)
 export(i2h)
