--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(pima)
 export(pima_boot)
 export(pima_hts)
 export(pima_htsreml)
+export(pwchisq)
 export(tau2h)
 importFrom(Rcpp,evalCpp)
 useDynLib(pimeta, .registration = TRUE)
