converting binary data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,cima)
 S3method(print,pima)
 export(bootPI)
 export(cima)
+export(convert_bin)
 export(htsdl)
 export(htsreml)
 export(i2h)
