--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,cima)
 S3method(plot,pima)
 S3method(print,cima)
 S3method(print,pima)
+S3method(print,pima_tau2h)
 export(bootPI)
 export(cima)
 export(convert_bin)
