--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: An implementation of prediction intervals for random-effects meta-a
   <doi:10.1002/sim.7140>, and Nagashima et al. (2019) <doi:10.1177/0962280218773520>,
   <arXiv:1804.01054>.
 Depends: R (>= 3.2.0)
-Imports: stats, Rcpp (>= 1.0.2), ggplot2 (>= 3.2.1), scales (>= 1.0.0), utils
+Imports: stats, Rcpp (>= 1.0.2), ggplot2 (>= 3.2.1), scales (>= 1.0.0)
 Suggests: knitr, rmarkdown
 LinkingTo: Rcpp, RcppEigen
 License: GPL-3
