--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(print,pima_tau2h)
 export(bootPI)
 export(cima)
 export(convert_bin)
+export(convert_mean)
 export(htsdl)
 export(htsreml)
 export(i2h)
