--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,4 +18,5 @@ LinkingTo: Rcpp, RcppEigen
 License: GPL-3
 Encoding: UTF-8
 VignetteBuilder: knitr
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
+URL: https://nshi-stat.github.io/pimeta/
