--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 1.1.4
 Authors@R: c(
   person("Kengo", "Nagashima", email = "nshi1201@gmail.com",
          role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4529-9045")),
-  person("Hisashi", "Noma", role = c("aut")),
-  person("Toshi A.", "Furukawa", role = c("aut")))
+  person("Hisashi", "Noma", role = c("ctb"), comment = "Contributor until 2019")),
+  person("Toshi A.", "Furukawa", role = c("ctb"), comment = "Contributor until 2019")))
 Description: An implementation of prediction intervals for random-effects meta-analysis:
   Higgins et al. (2009) <doi:10.1111/j.1467-985X.2008.00552.x>, Partlett and Riley (2017)
   <doi:10.1002/sim.7140>, and Nagashima et al. (2019) <doi:10.1177/0962280218773520>,
